--- a/Bytebank/Bytebank.csproj
+++ b/Bytebank/Bytebank.csproj
@@ -57,6 +57,7 @@
     <Compile Include="ParceiroComercial.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SaldoInsuficienteException.cs" />
     <Compile Include="Sistemas\SistemaInterno.cs" />
   </ItemGroup>
   <ItemGroup>
